Stop title now will use ellipsis for text-overflow, rather than spilling onto second line

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -64,6 +64,7 @@ ccc.ccc--converted {
 }
 
 .stopName{
+  text-overflow: ellipsis;
   overflow:hidden;
   display:inline-block;
   max-width:95%;
@@ -162,6 +163,7 @@ div.card-text.realtimeData:nth-child(2){
   
 .card-title{
   margin-bottom:.25rem;
+  white-space: nowrap;
 }
 
 .distance{
